--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,9 +22,6 @@
   }
 }
 
-.index-page {
-}
-
 .lines {
   @apply border-gray-200 dark:border-gray-600
 }
@@ -33,3 +30,10 @@
   @apply dark:text-gray-100 text-gray-800
 }
 
+.category-icons {
+  @apply relative z-10 rounded-full font-medium bg-gray-200 dark:bg-gray-600 px-3 py-1.5  text-gray-600 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-900
+}
+
+.inline-links {
+  @apply text-gray-400 hover:text-gray-500 dark:hover:text-gray-300
+}
