reformat, get ready for content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,8 +31,10 @@
 }
 
 .category-icons {
-  @apply relative z-10 rounded-full font-medium bg-gray-200 dark:bg-gray-600 px-3 py-1.5  text-gray-600 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-900
+  @apply relative z-10 rounded-full bg-gray-200 dark:bg-gray-600 px-3 py-1.5 font-medium text-gray-600 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-900
 }
+
+
 
 .inline-links {
   @apply text-gray-400 hover:text-gray-500 dark:hover:text-gray-300
