add articles, formatting, etc

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,8 +34,14 @@
   @apply relative z-10 rounded-full bg-gray-200 dark:bg-gray-600 px-3 py-1.5 font-medium text-gray-600 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-900
 }
 
-
-
 .inline-links {
   @apply text-gray-400 hover:text-gray-500 dark:hover:text-gray-300
+}
+
+.blog-image-full {
+  @apply h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-full
+}
+
+.blog-image-qt {
+  @apply h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-1/4
 }
