--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -1,4 +1,4 @@
-/* [data-rehype-pretty-code-fragment] code {
+[data-rehype-pretty-code-fragment] code {
   @apply grid min-w-full break-words rounded-none border-0 bg-transparent p-0 text-sm text-black;
   counter-reset: line;
   box-decoration-break: clone;
@@ -29,4 +29,4 @@
 }
 [data-rehype-pretty-code-title] + pre {
   @apply mt-0;
-} */
+}
