--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,7 +14,7 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-} */
+}
 
 @layer base{
   body {
@@ -39,9 +39,9 @@
 }
 
 .blog-image-full {
-  @apply h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-full
+  @apply h-auto rounded-md transition-shadow duration-300 ease-in-out shadow-lg hover:shadow-black/30 w-full
 }
 
 .blog-image-qt {
-  @apply h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-1/4
+  @apply h-auto rounded-md transition-shadow duration-300 ease-in-out shadow-lg hover:shadow-black/30 w-1/4
 }
