--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,8 @@
 }
 
 .inline-links {
-  @apply text-gray-400 hover:text-gray-500 dark:hover:text-gray-300
+  @apply text-gray-500 hover:text-slate-800 dark:hover:text-slate-300 dark:text-gray-400;
+  text-decoration: underline;
 }
 
 .blog-image-full {
@@ -44,4 +45,10 @@
 
 .blog-image-qt {
   @apply h-auto rounded-md transition-shadow duration-300 ease-in-out shadow-lg hover:shadow-black/30 w-1/4
+}
+
+.li-bullet {
+  font-size: 14px;
+  margin-left: 10px;
+  list-style-type: circle;
 }
