--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@
 }
 
 .category-icons {
-  @apply relative z-10 rounded-full bg-gray-100 dark:bg-gray-800 px-3 py-1.5 font-medium text-gray-600 dark:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-500
+  @apply relative z-10 rounded-full bg-gray-100 dark:bg-gray-800 px-3 py-1.5 font-medium text-gray-600 dark:text-gray-200
 }
 
 .inline-links {
